Fix file path and logs